--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@
   padding: 0;
 }
 body {
-
-
+/* background-image: url("https://images.unsplash.com/photo-1549465220-1a8b9238cd48?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1140&q=80"); */
+/* background-color: rgb(239, 226, 244); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* backdrop-filter: blur(10px); */
+  backdrop-filter: blur(10px);
   min-height: 100vh;
-  max-height: fit-content;
+  /* max-height: fit-content; */
   max-width: 100%;
   font-weight: 700;
   margin: auto;
@@ -26,7 +26,4 @@ body {
 .mfw{
   font-weight: 700;
   font-size: 2rem;
-}
-img{
-  border: 1px solid rgb(220, 148, 160);
 }
